--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@iconify-json/lucide": "^1.2.74",
     "@iconify-json/simple-icons": "^1.2.59",
+    "@nuxt/content": "^3.9.0",
     "@nuxt/ui": "^4.2.1",
     "nuxt": "^4.2.2"
   },
